--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/FroydCod3r/node-api#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^5.6.5"
+    "mongoose": "^5.6.5",
+    "require-dir": "^1.2.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
