--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-api",
   "version": "1.0.0",
   "description": "nodejs learning",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js"
@@ -28,6 +28,12 @@
     "require-dir": "^1.2.0"
   },
   "devDependencies": {
+    "eslint": "^6.1.0",
+    "eslint-config-standard": "^13.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
     "nodemon": "^1.19.1"
   }
 }
