--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "nodejs learning",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "prod": "cross-env NODE_ENV=prod node src/server.js",
+    "dev": "cross-env NODE_ENV=dev nodemon src/server.js",
+    "test": "cross-env NODE_ENV=test jest"
   },
   "repository": {
     "type": "git",
@@ -20,7 +21,9 @@
   "homepage": "https://github.com/FroydCod3r/node-api#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "celebrate": "^12.0.1",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.5",
@@ -34,6 +37,8 @@
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
-    "nodemon": "^1.19.1"
+    "jest": "^25.2.6",
+    "nodemon": "^1.19.1",
+    "supertest": "^4.0.2"
   }
 }
